--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body{
     color: white;
     text-align: center;
     font-family: cursive;
-    font-size: 10px;
-    height: 15px;
+    font-size: 12px;
+    height: 18px;
   }
 
 #snapshot_button {
@@ -24,4 +24,18 @@ body{
     border-style: solid;
     border-width: 2px;
     border-color: grey;
+}
+
+#result_object, #result_accuracy {
+    font-size: 30px;
+    color: red;
+    font-weight: 900;
+}
+
+ul {
+    color: black; 
+    font-size: 20px;
+    font-weight: bold;
+    list-style-position: inside;
+    text-align: left;
 }
